// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header includes a Skip Nav link as its first link 1`] = `
<Fragment>
  <HeaderSlim
    siteLogo={
      <SiteLogo
        image={
          Object {
            "alt": "Massachusetts state seal",
            "height": 45,
            "src": "test-file-stub",
            "width": 45,
          }
        }
        siteName="Paid Family and Medical Leave"
        url={
          Object {
            "domain": "/",
          }
        }
      />
    }
    skipNav={
      <a
        className="usa-skipnav"
        href="#main"
      >
        Skip to main content
      </a>
    }
    utilityNav={
      <AuthNav
        onLogout={[MockFunction]}
      />
    }
  />
</Fragment>
`;

exports[`Header renders Header for logged in claimant 1`] = `
<Fragment>
  <BetaBanner
    feedbackUrl="https://www.mass.gov/paidleave-claimant-feedback"
  />
  <HeaderSlim
    siteLogo={
      <SiteLogo
        image={
          Object {
            "alt": "Massachusetts state seal",
            "height": 45,
            "src": "test-file-stub",
            "width": 45,
          }
        }
        siteName="Paid Family and Medical Leave"
        url={
          Object {
            "domain": "/",
          }
        }
      />
    }
    skipNav={
      <a
        className="usa-skipnav"
        href="#main"
      >
        Skip to main content
      </a>
    }
    utilityNav={
      <AuthNav
        onLogout={[MockFunction]}
        user={
          User {
            "auth_id": null,
            "consented_to_data_sharing": null,
            "email_address": "email@address.com",
            "roles": Array [],
            "status": null,
            "user_id": "mock-user-id",
          }
        }
      />
    }
  />
</Fragment>
`;
